# simple-chat-bot

./: .gitignore  app.py  chat_bot.py  pyproject.toml  requirements.txt
src/: llm.py
